[gd_scene load_steps=15 format=3 uid="uid://drrakayx7l414"]

[ext_resource type="Texture2D" uid="uid://cduk6g8isfxdo" path="res://Assets/slime_purple.png" id="1_2mew7"]
[ext_resource type="Script" path="res://Scripts/mob.gd" id="1_gdkmj"]

[sub_resource type="AtlasTexture" id="AtlasTexture_msg0d"]
atlas = ExtResource("1_2mew7")
region = Rect2(0, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_tqwbv"]
atlas = ExtResource("1_2mew7")
region = Rect2(24, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_j1ldv"]
atlas = ExtResource("1_2mew7")
region = Rect2(48, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ka8hy"]
atlas = ExtResource("1_2mew7")
region = Rect2(72, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_vdjws"]
atlas = ExtResource("1_2mew7")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_bnunk"]
atlas = ExtResource("1_2mew7")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_tvy5o"]
atlas = ExtResource("1_2mew7")
region = Rect2(24, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_6e8dm"]
atlas = ExtResource("1_2mew7")
region = Rect2(48, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_i02ep"]
atlas = ExtResource("1_2mew7")
region = Rect2(72, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_vgt5e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_msg0d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tqwbv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j1ldv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ka8hy")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vdjws")
}],
"loop": true,
"name": &"Sleep",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bnunk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tvy5o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6e8dm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i02ep")
}],
"loop": false,
"name": &"Wake",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_fvfq8"]
radius = 72.0069

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jb7hv"]
size = Vector2(8, 10)

[node name="Mob" type="Node2D"]
script = ExtResource("1_gdkmj")
speed = 40.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -1)
sprite_frames = SubResource("SpriteFrames_vgt5e")
animation = &"Wake"
autoplay = "Sleep"

[node name="DetectionArea" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_fvfq8")
debug_color = Color(0.533333, 0.533333, 0.545098, 0.419608)

[node name="HurtBox" type="Area2D" parent="."]
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, 5)
shape = SubResource("RectangleShape2D_jb7hv")

[node name="Raycast_Left" type="RayCast2D" parent="."]
position = Vector2(0, 7)
target_position = Vector2(-20, 0)

[node name="Raycast_Right" type="RayCast2D" parent="."]
position = Vector2(0, 7)
target_position = Vector2(20, 0)

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_entered" from="HurtBox" to="." method="_on_hurt_box_body_entered"]
